Solve number two
commit more often this is too much.
add box sixing-border box to all (not needed?)
.card-add margin, padding top and bottom
.title-font size, padding, and margin
.content-add margin, padding to all sides
.button container-add center alignment, block, margin, and padding
button- add padding all sides, block, margin auto to center

--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 body {
   background: #eee;
   font-family: sans-serif;
@@ -7,21 +10,42 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding-top: 16px;
+  padding-bottom: 2px;
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 16px;
+  padding: 8px;
+  margin: 8px;
 }
 
 .content {
   background: #e3f4ff;
+  display: block;
+  margin:8px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 8px;
+  padding-right: 8px;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align : center;
+  display: block;
+  margin: 8px;
+  padding: 8px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  display: block;
+  margin:auto;
 }
